prevent header overlapping from content on mobile

--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -13,10 +13,15 @@ a {
   text-decoration: none;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+}
+
 /* Header */
 .header {
   top: 0;
-  margin: 1em 1em 1em 1.5em;
+  padding: 1em 1em 1em 1.5em;
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -55,6 +60,19 @@ a {
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
   margin-right: 1.5em;
+}
+
+@media screen and (max-width: 786px) {
+  .header:after {
+    content: "";
+    width: 100vw;
+    height: 55px;
+    background: #f9f9f9;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+  }
 }
 
 @media screen and (min-width: 786px) {
