--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -308,7 +308,6 @@ button {
 }
 
 .logo {
-  position: absolute;
   font-family: "Barlow", sans-serif;
   color: white;
   cursor: pointer;
